# todo-list-web

./: .gitignore  README.md  main.py  pyproject.toml  runme.py  todos.db
app/: config.py  main.py
app/database/: database.py
app/models/: todo.py
app/routers/: todos.py
app/schemas/: todo.py
app/services/: cache_service.py  todo_service.py
app/templates/: index.html
templates/: index.html
tests/: test_basic.py  test_cache_service.py  test_cleanup.py  test_config.py  test_database.py  test_todo_model.py  test_todo_service.py
