[project]
name = "todo-list-web"
version = "0.1.0"
description = "This is a small todo list web app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.9.0",
    "fastapi>=0.120.1",
    "httpx>=0.24.0",
    "jinja2>=3.1.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytest-asyncio>=1.2.0",
    "python-multipart>=0.0.6",
    "redis>=7.0.1",
    "ruff>=0.14.3",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--disable-warnings"]
markers = ["asyncio: mark test as async"]
